<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TrialExercise</string>
    <string name="action_settings">Settings</string>
    <string name="show_more">More </string>
    <string name="searchString">Search</string>
    <string name="search_hint">Search Something</string>
    <string name="players_empty_string">No Players were found</string>
    <string name="teams_empty_string">No Teams were found</string>
    <string name="strNoRecordsFound">No Players or Teams were found</string>

    <!-- Test Strings -->
    <string name="testString_Players">Players</string>
    <string name="testString_Teams">Teams</string>
    <string name="testString_player_name">Player name</string>
    <string name="testString_player_age">Age</string>
    <string name="testString_player_club">Club</string>
    <string name="testString_team_name">Team Name</string>
    <string name="testString_team_city">City</string>
    <string name="testString_team_stadium">Stadium</string>
    <string name="title_activity_simple">SimpleActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_simple_activity2">SimpleActivity2</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
