<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_overlay">
    <ImageView
        android:src="@drawable/unknown"
        android:id="@+id/flag_view"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_width="50dp"
        android:layout_height="50dp" />
    <TextView
        android:id="@+id/item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/flag_view"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginLeft="@dimen/margin_small"
        android:textSize="@dimen/textSize_medium"
        android:text="@string/testString_player_name"/>

    <LinearLayout
        android:id="@+id/age_layout"
        android:orientation="horizontal"
        android:layout_below="@id/item_name"
        android:layout_toRightOf="@id/flag_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_medium">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize_small"
            android:text="@string/testString_player_age"/>
        <TextView
            android:id="@+id/item_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize_small"
            android:layout_marginLeft="@dimen/margin_small"
            android:text="@string/testString_player_age"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_below="@id/item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/age_layout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize_small"
            android:text="@string/testString_player_club"/>
        <TextView
            android:id="@+id/item_club"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_small"
            android:textSize="@dimen/textSize_small"
            android:text="@string/testString_player_club"/>
    </LinearLayout>
</RelativeLayout>