<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_overlay">
    <ImageView
        android:src="@drawable/unknown"
        android:id="@+id/flag_view"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_width="50dp"
        android:layout_height="50dp" />
    <TextView
        android:id="@+id/item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/flag_view"
        android:textSize="@dimen/textSize_medium"
        android:layout_marginLeft="@dimen/margin_small"
        android:text="@string/testString_team_name"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_below="@id/item_name"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_toRightOf="@id/flag_view"
        android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/linear_layout"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize_small"
            android:text="@string/testString_team_city"/>
        <TextView
            android:id="@+id/item_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_small"
            android:textSize="@dimen/textSize_small"
            android:text="@string/testString_team_city"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_below="@id/item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize_small"
            android:text="@string/testString_team_stadium"/>
        <TextView
            android:id="@+id/item_stadium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_small"
            android:textSize="@dimen/textSize_small"
            android:text="@string/testString_team_stadium"/>
    </LinearLayout>
    </LinearLayout>
</RelativeLayout>